# ofa

./: CONTRIBUTING.md  LICENSE.md  README.md
core/: CMakeLists.txt
core/tests/: CMakeLists.txt
